Small addition to the page.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Yalcin</title>
 </head>
 <body>
-<h1>Hello Yalcin...</h1>
+<h1>Hello Yalcin... It is a great course.</h1>
 </body>
 </html>
